// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGenerationPlan > matches the recorded plan for the backend preset 1`] = `
{
  "commands": [
    [
      "git",
      "git",
      "init",
      "-b",
      "main",
    ],
    [
      "install",
      "npm",
      "install",
    ],
    [
      "hooks",
      "npm",
      "exec",
      "--",
      "husky",
    ],
    [
      "postInstall",
      "npm",
      "exec",
      "--",
      "prisma",
      "generate",
    ],
  ],
  "files": [
    {
      "mode": "644",
      "path": ".devstack/stack.json",
      "sha256": "0304bbffdcc2f85d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".env",
      "sha256": "f18cea6c31c3825e",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".env.example",
      "sha256": "dbfb81377f9567ad",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".gitignore",
      "sha256": "ef4553fdf74885ae",
      "strategy": "line-merge",
    },
    {
      "mode": "755",
      "path": ".husky/commit-msg",
      "sha256": "04eb86d55d040104",
      "strategy": "create",
    },
    {
      "mode": "755",
      "path": ".husky/pre-commit",
      "sha256": "3313a08cef137860",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".lintstagedrc.json",
      "sha256": "4ee0ef09b8860aad",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".prettierignore",
      "sha256": "1e240a2c47881415",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".prettierrc",
      "sha256": "a55df59e012d84d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".secretlintrc.json",
      "sha256": "1c0e86ca72216c22",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "commitlint.config.cjs",
      "sha256": "23b0be1422f088bf",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "eslint.config.mjs",
      "sha256": "423e53b229e743d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "package.json",
      "sha256": "99a25e07d253abef",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "prisma.config.mjs",
      "sha256": "dd97f334883a822b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "prisma/schema.prisma",
      "sha256": "94c7bc2816e9a523",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "README.md",
      "sha256": "79551bca280cdec9",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "src/app.ts",
      "sha256": "e5e64065dd195156",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/application/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/config/env.ts",
      "sha256": "3ae19ac28fae2f98",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/db/client.ts",
      "sha256": "c8c15119f39e7ba4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/domain/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/index.ts",
      "sha256": "d0159b00f4b04855",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/infrastructure/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/interfaces/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/api-response.ts",
      "sha256": "e1dcd5f6cc636bf3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/errors.ts",
      "sha256": "959145a6a6478969",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/logger.ts",
      "sha256": "b4d54bb2e3d882fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/readiness.ts",
      "sha256": "2213ff0b93c82d9f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lib/shutdown.ts",
      "sha256": "ca146a2c8dd4f95d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/lifecycle.ts",
      "sha256": "4426122564d53b5f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/compression.ts",
      "sha256": "345c26a8946e8d83",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/cors.ts",
      "sha256": "9d54843270dee87d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/error-handler.ts",
      "sha256": "995b16d4377983f6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/helmet.ts",
      "sha256": "fcd2176ce0ddb5f7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/not-found.ts",
      "sha256": "5a682f6a71a7d664",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/origin-check.ts",
      "sha256": "aff5f991bcfab39c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/rate-limit.ts",
      "sha256": "76e7528247bfdf5b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/request-id.ts",
      "sha256": "0dea0abb29e54cf7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/request-logger.ts",
      "sha256": "08feb1cb39f2edb8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/middlewares/validate.ts",
      "sha256": "41948f20eee5cc29",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/routes/health.ts",
      "sha256": "5b724233d0f69fc2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "src/types/express.d.ts",
      "sha256": "ed83a806633a0b2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/api-response.test.ts",
      "sha256": "7fe6aff12dafe4d7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/health.test.ts",
      "sha256": "de56c3fe751d1e2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/helpers/app.ts",
      "sha256": "858fe9e79041dbcc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tests/rate-limit.test.ts",
      "sha256": "9f7b37a3a0447967",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.build.json",
      "sha256": "561407be5e72f46b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "tsconfig.json",
      "sha256": "1b19f1d87c0d84fc",
      "strategy": "create",
    },
  ],
  "modules": [
    "language-node",
    "orm-prisma",
    "arch-clean",
    "quality-eslint",
    "quality-husky",
    "quality-prettier",
    "middleware-compression",
    "middleware-cors",
    "middleware-request-logger",
    "security-helmet",
    "security-origin-checks",
    "security-rate-limit",
    "core-backend",
    "framework-express",
  ],
}
`;

exports[`buildGenerationPlan > matches the recorded plan for the fullstack-next-express preset 1`] = `
{
  "commands": [
    [
      "git",
      "git",
      "init",
      "-b",
      "main",
    ],
    [
      "install",
      "npm",
      "install",
    ],
    [
      "hooks",
      "npm",
      "exec",
      "--",
      "husky",
    ],
    [
      "postInstall",
      "npm",
      "exec",
      "--",
      "prisma",
      "generate",
    ],
  ],
  "files": [
    {
      "mode": "644",
      "path": ".devstack/stack.json",
      "sha256": "ab926b6cccf072a2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".dockerignore",
      "sha256": "6e493f7af86fb56a",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": ".github/workflows/ci.yml",
      "sha256": "254036539052065c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".gitignore",
      "sha256": "8ddfde27f8058400",
      "strategy": "line-merge",
    },
    {
      "mode": "755",
      "path": ".husky/commit-msg",
      "sha256": "04eb86d55d040104",
      "strategy": "create",
    },
    {
      "mode": "755",
      "path": ".husky/pre-commit",
      "sha256": "3313a08cef137860",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".lintstagedrc.json",
      "sha256": "39f135c98eb89486",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": ".prettierignore",
      "sha256": "1e240a2c47881415",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".prettierrc",
      "sha256": "a55df59e012d84d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": ".secretlintrc.json",
      "sha256": "1c0e86ca72216c22",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/api/.env",
      "sha256": "8bc6858836718b96",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/api/.env.example",
      "sha256": "da2bada554b8e638",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/.gitignore",
      "sha256": "ef4553fdf74885ae",
      "strategy": "line-merge",
    },
    {
      "mode": "644",
      "path": "apps/api/Dockerfile",
      "sha256": "3e64ccdbab529f3c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/package.json",
      "sha256": "e483240d44788a66",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "apps/api/prisma.config.mjs",
      "sha256": "dd97f334883a822b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/prisma/schema.prisma",
      "sha256": "94c7bc2816e9a523",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/app.ts",
      "sha256": "4ac94c0ff87b3e6e",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/config/env.ts",
      "sha256": "584b3498a521d985",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/db/client.ts",
      "sha256": "c8c15119f39e7ba4",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/docs/openapi.ts",
      "sha256": "5444dfe52772e1cf",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/features/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/index.ts",
      "sha256": "d0159b00f4b04855",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/api-response.ts",
      "sha256": "e1dcd5f6cc636bf3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/errors.ts",
      "sha256": "959145a6a6478969",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/logger.ts",
      "sha256": "b4d54bb2e3d882fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/readiness.ts",
      "sha256": "2213ff0b93c82d9f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lib/shutdown.ts",
      "sha256": "ca146a2c8dd4f95d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/lifecycle.ts",
      "sha256": "4426122564d53b5f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/cors.ts",
      "sha256": "9d54843270dee87d",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/error-handler.ts",
      "sha256": "995b16d4377983f6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/helmet.ts",
      "sha256": "fcd2176ce0ddb5f7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/not-found.ts",
      "sha256": "5a682f6a71a7d664",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/rate-limit.ts",
      "sha256": "76e7528247bfdf5b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/request-id.ts",
      "sha256": "0dea0abb29e54cf7",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/request-logger.ts",
      "sha256": "08feb1cb39f2edb8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/middlewares/validate.ts",
      "sha256": "41948f20eee5cc29",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/routes/docs.ts",
      "sha256": "8ca69eeed531c7b3",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/routes/health.ts",
      "sha256": "5b724233d0f69fc2",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/shared/types/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/shared/utils/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/src/types/express.d.ts",
      "sha256": "ed83a806633a0b2c",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/api-response.test.ts",
      "sha256": "780f88f34d6e03db",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/docs.test.ts",
      "sha256": "b32488613886e9e6",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/health.test.ts",
      "sha256": "10cccbc87bb5c976",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/helpers/app.ts",
      "sha256": "858fe9e79041dbcc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tests/rate-limit.test.ts",
      "sha256": "f1aecd60a6d6223a",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tsconfig.build.json",
      "sha256": "561407be5e72f46b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/tsconfig.json",
      "sha256": "1b19f1d87c0d84fc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/api/vitest.config.ts",
      "sha256": "92706cb90111a712",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/.env",
      "sha256": "5a7de190c5388d3c",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "apps/web/.env.example",
      "sha256": "a5793d50386a6947",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/globals.css",
      "sha256": "aea0fe6baa73fbdf",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/health/route.ts",
      "sha256": "a30bffab8933da73",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/layout.tsx",
      "sha256": "8852e9fbe2e2a79f",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/app/page.tsx",
      "sha256": "10e365f65d343045",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/components/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/Dockerfile",
      "sha256": "031cd4a7871b9d4b",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/features/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/hooks/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/api.ts",
      "sha256": "26b6a19dd626acec",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/env.ts",
      "sha256": "f7641adef49b7810",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/lib/status.ts",
      "sha256": "2aee034c25604d70",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/next.config.ts",
      "sha256": "de56c558f4b06c99",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/package.json",
      "sha256": "d98b6f5e510835a7",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "apps/web/postcss.config.mjs",
      "sha256": "e4f77bad33263af0",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/tests/status.test.ts",
      "sha256": "97ccfef00afda8dc",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/tsconfig.json",
      "sha256": "a9260fb71443db68",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/types/.gitkeep",
      "sha256": "e3b0c44298fc1c14",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "apps/web/vitest.config.mts",
      "sha256": "a193085dd2a89422",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "commitlint.config.cjs",
      "sha256": "23b0be1422f088bf",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "docker-compose.yml",
      "sha256": "495f1aa5b39bd6ee",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "eslint.config.mjs",
      "sha256": "423e53b229e743d8",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "package.json",
      "sha256": "ae33352ee3433636",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "packages/shared/package.json",
      "sha256": "06c3ccbf214071c9",
      "strategy": "json-merge",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/api-client.ts",
      "sha256": "7bc3b1d233cfab31",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/envelope.ts",
      "sha256": "819d2d4ec478c4df",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/src/index.ts",
      "sha256": "26e92f135524d798",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "packages/shared/tsconfig.json",
      "sha256": "e5e23bec2ee58602",
      "strategy": "create",
    },
    {
      "mode": "644",
      "path": "README.md",
      "sha256": "c88871aec5254f0a",
      "strategy": "skip-if-exists",
    },
    {
      "mode": "644",
      "path": "turbo.json",
      "sha256": "96ae989444f63bf1",
      "strategy": "create",
    },
  ],
  "modules": [
    "language-node",
    "layout-monorepo",
    "api-versioning",
    "orm-prisma",
    "arch-feature",
    "testing-vitest",
    "quality-eslint",
    "quality-husky",
    "quality-prettier",
    "middleware-cors",
    "middleware-request-logger",
    "security-helmet",
    "security-rate-limit",
    "devops-docker",
    "devops-github-actions",
    "core-backend",
    "framework-express",
    "api-docs-scalar",
    "shared-api",
    "framework-nextjs",
    "arch-web-feature",
    "ui-tailwind",
    "testing-vitest-web",
    "devops-docker-web",
  ],
}
`;
